# OpenEmux

./: .gitignore  .gitmodules  LICENSE  Makefile  README.md  ROADMAP.md  THIRD_PARTY_NOTICES.md  pyproject.toml  run.sh
docs/: DEVELOPMENT.md  index.html  phase_1_frontend_setup.md  phase_2_emulator_integration.md  phase_3_library_management.md  phase_4_integrated_runtime_experience.md  phase_5_input_management.md  phase_6_cover_pipeline.md  phase_7_visual_pipeline.md
implementation_notes/: known_issues.md  phase_01_frontend_foundation.md  phase_02_retroarch_runtime.md  phase_03_cover_pipeline.md  phase_04_runtime_ux.md  phase_05_input_management.md  phase_06_visual_pipeline.md  phase_07_first_boot_bootstrap.md  phase_08_gnome_hig_ui_refactor.md  phase_09_flatpak_flathub.md  phase_10_cartridge_prerender.md
packaging/: README.md  build.sh
release/: NOTAS_DE_RELEASE_v1.3.0.md  RELEASE_NOTES_v1.3.0.md  RELEASE_NOTES_v1.3.1.md  RELEASE_NOTES_v1.4.0.md  RELEASE_NOTES_v1.5.0.md  RELEASE_NOTES_v1.5.1.md  RELEASE_NOTES_v1.5.2.md  RELEASE_NOTES_v1.6.0.md  RELEASE_NOTES_v1.7.0.md
tests/: test_archives.py  test_bios_manager.py  test_cartridge_render.py  test_collections.py  test_config_bootstrap_defaults.py  test_config_locale.py  test_config_scope_layout.py  test_cores.py  test_cover_sync.py  test_desktop_integration.py  test_first_boot.py  test_gamepad_reader.py  test_grid_layout.py  test_i18n.py  test_input_actions.py  test_input_profiles.py  test_library_view.py  test_navigation.py  test_paths.py  test_play_history.py  test_playlist_manager.py  test_retroarch_launcher.py  (+12 more)
(+118 files in other folders)
